fixed layout issues, so the logout button can be at the bottom of the sidebar; turns out "flex" only works when its directly inside of something with "layout". Also added the capability to route based on the current bootstrap-y size class so we can bake in some responsiveness

--- a/src/main/webapp/styles/james.css
+++ b/src/main/webapp/styles/james.css
@@ -12,7 +12,7 @@ material-dialog {
 }
 
 md-button:not(.md-button-fab) {
-  width: 10em;
+  width: 90%;
 }
 
 md-button.glyphicon {
@@ -48,4 +48,10 @@ md-button:not([disabled]):hover, md-button:not([disabled]).focus {
 md-input-group, .md-input-group {
 	
 	margin-right:15px
+}
+
+md-sidenav {
+
+  min-width: 304px;
+  width:auto;
 }
